@@ -3,8 +3,9 @@ debathena-discuss (10.0.8-0debathena1) unstable; urgency=low
   * Add one-character aliases to discuss. Patch by Ben Kaduk. (Trac: #238)
   * Squash some lintian warnings by switching from ${Source-Version} to
     ${source:Version} and ${binary:Version}
+  * Use HAVE_KRB4 and HAVE_KRB5 instead of KERBEROS and KERBEROS5.
 
- -- Evan Broder <broder@mit.edu>  Mon, 18 May 2009 18:23:53 -0400
+ -- Evan Broder <broder@mit.edu>  Mon, 18 May 2009 18:48:39 -0400
 
 debathena-discuss (10.0.7-0debathena3) unstable; urgency=low
 
